--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
@@ -61,6 +62,7 @@
     "@types/node": "^20",
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
+    "@types/styled-components": "^5.1.36",
     "genkit-cli": "^1.20.0",
     "patch-package": "^8.0.0",
     "postcss": "^8",
